crates/no_unwrap_or_else_panic/examples/fail_unwrap_in_rstest_non_test_module.stderr
error: Replace unwrap_or_else on `std::option::Option<&str>` with a non-panicking fallback.
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:22:9
   |
LL |         parsed.unwrap_or_else(|| panic!("ordinary code must not inherit rstest harness status"));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The closure supplied to unwrap_or_else triggers a panic.
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:22:9
   |
LL |         parsed.unwrap_or_else(|| panic!("ordinary code must not inherit rstest harness status"));
   |         ^^^^^^
   = help: Propagate the error or use expect with a descriptive message instead of panicking.
note: the lint level is defined here
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:13:10
   |
LL |     deny(no_unwrap_or_else_panic)
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

